# plain-json

./: .clangd  .gitignore  .gitmodules  LICENSE  Makefile  json.h  meson.build  plain_json.h  readme.md
data/: readme.md
fuzz/: .gitignore  afl_helper.sh  fuzzing_target.c  json.dict  readme.md  setup.sh
fuzz/input/: case_0.json  case_1.json  case_2.json  case_4.json  case_5.json  case_6.json
plain-json/: plain_json.h
subprojects/: libtest.wrap
test/: dump_state.c  meson.build  test_config.h  test_main.c  test_number.c  test_parsing.c  test_setup.h  test_string.c  test_structure.c  test_unicode.c  test_utf8.c  test_value_parsing.c
tools/: check_json_in_dir.sh  dump_state.c  json_common.h  json_schema_test_suit.c  json_test_suit.c  meson.build
